--- a/test_github.Rmd
+++ b/test_github.Rmd
@@ -7,17 +7,17 @@ output: html_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-Type your name (or anything else) HERE: 
+Type your name (or anything else) HERE: Meghan Fletcher 
 
 Here's some code (change the variable names and values):
 ```{r}
 # Change these variable names and values:
 
-blue <- 10
+yellow <- 26
 
-red <- 15
+cyan4 <- 35
 
-purple <- blue/red
+pink <- blue/red
 
 ```
 
